fix: lifecycle in new color scheme

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -5,7 +5,7 @@ import {RoleButton,DomainButton,ProblemButton,TopicButton} from "/src/components
 
 The NFDI4Chem knowledge base provides information and recommendations for digitising all key steps in chemical research to support scientists in their efforts to collect, store, process, analyse, disclose, and reuse research data. Actions to promote Open Science and Research Data Management in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and re-use.<sup>[1](https://riojournal.com/article/55852/)</sup>
 
-![LifeCycle](/img/Intro/LifeCycle.png)
+![LifeCycle](/img/Intro/N4C_DataLifecycle.svg)
 
 ## Why is RDM important for chemistry?
 
