fixed spelling error JCAMP-DX file format

--- a/docs/10_domains/10_synthetic_chemistry.mdx
+++ b/docs/10_domains/10_synthetic_chemistry.mdx
@@ -44,7 +44,7 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 
 |Analytical method|Exemplary proprietary file extensions|Typical size of propietary file|Converter to open file format|Recommendation for open file extension*|File format|File size of open format|
 |:------------|:------------|:------------|:------------|:------------|:------------|:------------|
-|NMR spectroscopy|.fid|<1-50 MB|MNova<br/>Topspin|.jdx<br/>.zip<br/>|JACAMP-DX<br/>NMReDATA|~1 MB|
+|NMR spectroscopy|.fid|<1-50 MB|MNova<br/>Topspin|.jdx<br/>.zip<br/>|JCAMP-DX<br/>NMReDATA|~1 MB|
 |Mass spectrometry|.raw<br/>.d<br/>.baf|~250 MB|Proteowizard|.mzML|mzML|~250 MB|
 |IR spectroscopy|.ispd<br/>.icIR|<1 MB| |.dx|JCAMP-DX|<1 MB|
 |Raman spectroscopy|.dpt<br/>.spc<br/>.icRaman<br/>.sps<br/>.acs|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
