--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -1,5 +1,9 @@
 ---
 title: "Repositories"
+description: storage for preformatted data
+page_id: repositories
+related_pages:
+	problems: [data_documentation, data_storage]
 ---
 
 ## Introduction
@@ -29,7 +33,7 @@ Usually repositories offer a search function with which users can find, view and
 
 Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry (e.g. https://fairsharing.org/ or https://www.re3data.org/). Repository registry services are an essential component of the [FAIR](/docs/topics/fair) (**F**indable **A**ccessible **I**nteroperable **R**eusable)-strategy as they help researchers to navigate through thousands of data repository services to find the most suitable one to store and provide access to their research outputs as well as to enable them to search for and repurpose FAIR data created by others. DataCite's Repository Finder finds repositories that meet the criteria recommended by the Enabling FAIR Data Project. ROAR and OPENDOAR are directories that list Open Access repositories from all over the world.
 
-Repositories can also be certified (e.g. CoreTrustSeal).  Such certification ensures data users, among other things, that data will be usable, citable and preserved in the long run. 
+Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures data users, among other things, that data will be usable, citable and preserved in the long run. 
 
 Nowadays more and more peer review journals mandate authors to deposit their data into repositories (e.g. figshare) prior to manuscript submission. If authors do not comply with these rules, the review process is not initiated.
 
