added hint for databases

--- a/docs/30_problems/30_data_organisation.mdx
+++ b/docs/30_problems/30_data_organisation.mdx
@@ -6,7 +6,7 @@ related_pages:
 	problems: [data_documentation, data_storage]
 ---
 
-After [documentation of your research data](/docs/problems/data_documentation) there needs to follow more detailed descriptions of how your information is saved - a quick look at files and folders. For an idea about storage locations and storage methods see [Data Storage and Archiving](/docs/problems/data_storage).
+After [documentation of your research data](/docs/problems/data_documentation) there needs to follow more detailed descriptions of how your information is saved - a quick look at files and folders, but when working with many or large data sets, the advantages of databases can become relevant. Consider whether this applies to your project and whether only files exported from the database might be useful. For an idea about storage locations and storage methods see [Data Storage and Archiving](/docs/problems/data_storage).
 
 
 ## files: name conventions
