Recommendations on repositories and databases

--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -46,6 +46,28 @@ In the field of synthetic and analytical chemistry, the repository [Chemotion](h
 - provision of functions for a seamless publication and citation of deposited data
 - support of [Digital Object Identifier](/docs/topics/pid) (DOI) generation, the comparison of the submissions with PubChem instances, and workflows for peer reviewing of the submissions including embargo settings
 
+### Core repositories
+
+- [Chemotion Repository](https://www.chemotion-repository.net/welcome) Repository for molecules, reactions and research data 
+- [MassBank EU](https://massbank.eu/MassBank/) Ecosystem of databases and tools for mass spectrometry reference spectra (open source)
+- [SUPRABANK](https://suprabank.org/) Curated open resource for intermolecular interactions
+- [STRENDA DB](https://www.beilstein-strenda-db.org/) Standards for reporting enzymology data
+
+### Associated repositories and databases
+
+- [CSD/CCDC](https://www.ccdc.cam.ac.uk/) Cambridge Structural Database 
+- [ICSD](https://icsd.fiz-karlsruhe.de/index.xhtml;jsessionid=0C3EFEDF8A88E145B9C25B0935E0E0EF) Inorganic Crystal Structure Database
+
+### Other relevant repositories and databases
+
+- [NOMAD](https://nomad-lab.eu/) FAIR sharing and use of materials science data 
+- [ioChem-BD](https://www.iochem-bd.org/) Repository for computational chemistry results 
+- [RADAR](https://www.radar-service.eu/radar/en/home) Repository for multi-disciplinar research data 
+- [Zenodo](https://zenodo.org/) General-purpose open-access repository developed under the European OpenAIRE program and operated by CERN
+- [EUDAT CDI](https://www.eudat.eu/) Pan-European network consisting of more than 25 research organisations, data and computing centers
+- [ChemSpider](https://www.chemspider.com/)  Free chemical structure database providing fast text and structure search access to over 100 million structures from hundreds of data sources
+- [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry database at the National Institutes of Health (NIH)
+
 ## References/ further reading:
 - [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
 - https://www.rd-alliance.org/groups/repository-platforms-research-data.html
