--- a/docs/30_problems/10_dmp.mdx
+++ b/docs/30_problems/10_dmp.mdx
@@ -48,16 +48,16 @@ To further support researchers in answering the questions, working groups have b
 
 Further information about DMP tools can be found in the [DMP Tool Guide](https://zenodo.org/record/4632308#.YYElWJ6ZNPY).
 
-## Literature and further reading
+## Sources and further information
 
-[DMP Template](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjml9rO--zzAhUBDewKHXdJBvcQFnoECAwQAQ&url=https%3A%2F%2Fec.europa.eu%2Finfo%2Ffunding-tenders%2Fopportunities%2Fdocs%2F2021-2027%2Fhorizon%2Ftemp-form%2Freport%2Fdata-management-plan-template_he_en.docx&usg=AOvVaw1ho40vgdz3hm2YvFUZ-m4t)<br/>
-[DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)<br/>
-https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/<br/>
-https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html<br/>
-https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung<br/>
-https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html<br/> 
-https://dmponline.dcc.ac.uk/<br/> 
-https://dmptool.org/<br/>
-https://rdmo.aip.de/<br/>
-https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/<br/>
-https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg
+- [DMP Template](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjml9rO--zzAhUBDewKHXdJBvcQFnoECAwQAQ&url=https%3A%2F%2Fec.europa.eu%2Finfo%2Ffunding-tenders%2Fopportunities%2Fdocs%2F2021-2027%2Fhorizon%2Ftemp-form%2Freport%2Fdata-management-plan-template_he_en.docx&usg=AOvVaw1ho40vgdz3hm2YvFUZ-m4t)<br/>
+- [DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)<br/>
+- https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/<br/>
+- https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html<br/>
+- https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung<br/>
+- https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html<br/> 
+- https://dmponline.dcc.ac.uk/<br/> 
+- https://dmptool.org/<br/>
+- https://rdmo.aip.de/<br/>
+- https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/<br/>
+- https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg
