--- a/docs/30_problems/10_dmp.mdx
+++ b/docs/30_problems/10_dmp.mdx
@@ -51,13 +51,13 @@ Further information about DMP tools can be found in the [DMP Tool Guide](https:/
 ## Sources and further information
 
 - [DMP Template](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjml9rO--zzAhUBDewKHXdJBvcQFnoECAwQAQ&url=https%3A%2F%2Fec.europa.eu%2Finfo%2Ffunding-tenders%2Fopportunities%2Fdocs%2F2021-2027%2Fhorizon%2Ftemp-form%2Freport%2Fdata-management-plan-template_he_en.docx&usg=AOvVaw1ho40vgdz3hm2YvFUZ-m4t)<br/>
+- [DMPTool](https://dmptool.org/)
 - [DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)<br/>
-- https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/<br/>
-- https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html<br/>
-- https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung<br/>
+- [Elements of a Data Management Plan](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html)<br/> 
 - https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html<br/> 
 - https://dmponline.dcc.ac.uk/<br/> 
-- https://dmptool.org/<br/>
-- https://rdmo.aip.de/<br/>
-- https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/<br/>
-- https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg
+- https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg<br/>
+- Practical Guide to the International Alignment of Research Data Management - Extended Edition<br/>[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4915862.svg)](https://doi.org/10.5281/zenodo.4915862)<br/>
+- german: https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/<br/>
+- german: https://rdmo.aip.de/<br/>
+- german: https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung<br/>
