--- a/docs/30_problems/30_data_organisation.mdx
+++ b/docs/30_problems/30_data_organisation.mdx
@@ -6,23 +6,23 @@ related_pages:
 	problems: [data_documentation, data_storage]
 ---
 
-After [documentation of your research data](/docs/problems/data_documentation) there needs to follow more detailed descriptions of how your information is saved - a quick look at files and folders, but when working with many or large data sets, the advantages of databases can become relevant. Consider whether this applies to your project and whether only files exported from the database might be useful. For an idea about storage locations and storage methods see [Data Storage and Archiving](/docs/problems/data_storage).
+After [documentation of your research data](/docs/problems/data_documentation), more detailed descriptions of how your information is saved is required - a quick look at files and folders, but when working with many or large data sets, the advantages of databases can become relevant. Consider whether this applies to your project and whether only files exported from the database might be useful. For an idea about storage locations and storage methods see [Data Storage and Archiving](/docs/problems/data_storage).
 
 
-## files: name conventions
+## files: naming conventions
 
-Human users benefit from file names that allow easy sorting and a notion of the content at first glance. But grown expressions like the following are not helpful:
+Human users benefit from file names that allow for easy sorting and a notion of the content at first glance. However, file names such as the following are not helpful:
 
     mydata.csv
     mydata_final.csv
     myfinaldata_V2.csv
     myfinaldata_V2_ready.csv
 
-We need short and descriptive file names as identifier for a document. Useful names gives information what the file contains and helps in sorting them. Pay attention to your naming scheme when working with others: It is important to follow the same file naming convention, so develop an adapted scheme when the project starts and write it down including explaination of abbreviations in your [data documentation](/docs/problems/data_documentation).
+We need short and descriptive file names as an identifier for a document. Useful names give information on what the files contain and helps in sorting them. Pay attention to your naming scheme when working with others: It is important to follow the same file naming convention, so develop an adapted scheme when the project starts and write it down including explaination of abbreviations in your [data documentation](/docs/problems/data_documentation).
 
 Try to think about the different statuses (raw data, draft, temporary, finished, ...) and types (editable source format like textfiles or csv in contrast to export formats such as PDF) of your documents.
 
-Find a balanced set of elements: Too many make it difficult to grasp quickly, while too few elements quickly exhaust the possible namespace. Be aware of the maximum number of characters for path names.
+Find a balanced set of elements: Too many make it difficult to grasp quickly, while too few elements rapidly exhaust the possible namespace. Be aware of the maximum number of characters for path names.
 
 :::note General basics for naming files:
 * Order the elements from general to specific.
@@ -76,7 +76,7 @@ Stash snapshots or simply track changes and allow to find something that existed
 
 ## files: types of metadata
 
-Consider the way Data and [Metadata](/docs/topics/metadata/) can be stored together as FDOs (Fair Digital Objects). For example, metadata can be divided into the following four categories:
+Consider the way data and [Metadata](/docs/topics/metadata/) can be stored together as FDOs (Fair Digital Objects). For example, metadata can be divided into the following four categories:
 * descriptive metadata
 * administrative metadata
 * technical metadata
@@ -97,7 +97,7 @@ Different disciplines use established standards, see [Data Format Standard](/doc
 
 ## folder structure
 
-One look and everything should be intuitively understandable. The folder structure helps you navigate through the individual pieces of information. Develop a convention when the project starts and write it down including explaination of abbreviations in your [data documentation](/docs/problems/data_documentation). Try to consistently apply the same strategy in every project within the research group.
+Everything should be immediately intuitively understandable. The folder structure helps you to navigate through the individual pieces of information. Develop a convention when the project starts and write it down including explaination of abbreviations in your [data documentation](/docs/problems/data_documentation). Try to consistently apply the same strategy in every project within the research group.
 
 Folders should:
 * follow a structure with folders and subfolders that correspond to the project design and workflow
