--- a/docs/30_problems/40_data_documentation.mdx
+++ b/docs/30_problems/40_data_documentation.mdx
@@ -20,7 +20,7 @@ _Andreas von der Dunk, Technische Universität Dresden, Service Center Research 
 
 A clean and comprehensible organisation of data and documents are an important part of good scientific practice and an important step to realise research data management according to the [FAIR data principles](/docs/topics/fair). 
 
-An essential task is to plan the organisation and storage of data, metadata, and documents in advance and to document the relevant measures.
+An essential task is to plan the organisation and storage of data, [metadata](/docs/topics/metadata), and documents in advance and to document the relevant measures.
 
 Central requirements are the definition of [formal responsibilities, organisational conventions](#formal-responsibilities-and-organisational-conventions) and [technical implementations](#technical-implementations) to organise the data and meta information produced. The information collected for this purpose is recorded in the [Data Management Plan](/docs/problems/dmp). Note that a good data organisation also estimates the costs (see [costing tool and checklist](https://ukdataservice.ac.uk/learning-hub/research-data-management/plan-to-share/costing/) for example) in the early application phase.
 
@@ -35,7 +35,7 @@ To make a long story short: It's mainly about describing who will and how to wor
 
 The result should be descriptive documents that unambiguously define for files which are used in the course of the daily work routines:
 - on which status (for example original file, temporary work file; Draft, intermediate version, final version),
-- where (workstation PC, central file server, Database), 
+- where (workstation PC, central file server, database), 
 - for how long (temporarily, project duration, long-term availability),
 - and in which format they are saved.
 
@@ -46,7 +46,7 @@ The result should be descriptive documents that unambiguously define for files w
 
 Get an overview of the occurring data and document flows. A short description, easy to understand for every user, should be accessible on a low level and explain the main concepts. The data itself needs to have a bulletproof [Data Organisation](/docs/problems/data_organisation) including [Metadata](/docs/topics/metadata/) and suitable [Data Format Standards](/docs/topics/format_standards/). Find out more about the usual [Best Practice](/docs/topics/best_practice/) at your institute or within your discipline. Plan how documents can be shared between project staff and what needs to be accessed for [Data Publication](/docs/problems/data_publication/) with [PID](/docs/topics/pid/).
 
-Data security affects all technical and organisational issues to protect the data from alteration, loss, and Destruction. In this context, storage methods, backup procedures, necessary physical resources as well as automated and administrative routines must be planned and put in place. Ask local contacts or external experts about already established technologies for [Data Storage and Archiving](/docs/problems/data_storage) as well as suitable [Repositories](/docs/topics/repositories/).
+Data security affects all technical and organisational issues to protect the data from alteration, loss, and destruction. In this context, storage methods, backup procedures, necessary physical resources as well as automated and administrative routines must be planned and put in place. Ask local contacts or external experts about already established technologies for [Data Storage and Archiving](/docs/problems/data_storage) as well as suitable [Repositories](/docs/topics/repositories/).
 
 
 ## Synopsis
