--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -68,9 +68,9 @@ In the field of synthetic and analytical chemistry, the repository [Chemotion](h
 - [ChemSpider](https://www.chemspider.com/)  Free chemical structure database providing fast text and structure search access to over 100 million structures from hundreds of data sources
 - [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry database at the National Institutes of Health (NIH)
 
-## References/ further reading:
-- [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
+## Sources and further information
 - https://www.rd-alliance.org/groups/repository-platforms-research-data.html
 - https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
-- The Repository Chemotion: Infrastructure for Sustainable Research in Chemistry,<br/>https://doi.org/10.1002/anie.202007702
-- Chemotion ELN: an Open Source electronic lab notebook for chemists in academia,<br/>https://doi.org/10.1186/s13321-017-0240-0
+- The Repository Chemotion: Infrastructure for Sustainable Research in Chemistry<br/>https://doi.org/10.1002/anie.202007702
+- Chemotion ELN: an Open Source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
+- german: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
