--- a/docs/30_problems/10_dmp.mdx
+++ b/docs/30_problems/10_dmp.mdx
@@ -21,7 +21,7 @@ Image Elements of a Data Management Plan will follow soon.
 In addition to funder compliance, there should be an intrinsic motivation for a DMP. The benefits of a data management plan are obvious in this process. A DMP
 
 - supports your research, because the data is findable and understandable. It is clearly described in a DMP.
-- supports the data to be [FAIR](/docs/topics/fair). In a DMP not only the findability is reflected, also the accessibility, interoperability and reusability is described.
+- supports the data to be [FAIR](/docs/topics/fair). In a DMP not only the findability is reflected, but also the accessibility, interoperability and reusability is described.
 - saves you time in the long-term, because all necessary information is summarised in a DMP.
 - helps you to think in advance and to consider issues connected with confidentiality, ethics, security and copyright directly from the project start.
 - offers continuity of knowledge and its transmission when new project members join.
