--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -131,10 +131,8 @@ As noted in [I1](#i1-metadata-use-a-formal-accessible-shared-and-broadly-applica
 
 Where required, format converters should be linked in the dataset’s metadata.
 
-## External Resources and Information
+## Sources and further information
 
-[FORCE 11: FAIR Data Principles](https://www.force11.org/group/fairgroup/fairprinciples)
-
-[Go-FAIR initiative: FAIR Principles](https://www.go-fair.org/fair-principles/)
-
-[TIB Blog: The FAIR Data Principles for Research Data](https://blogs.tib.eu/wp/tib/2017/09/12/the-fair-data-principles-for-research-data/)
+- [FORCE 11: FAIR Data Principles](https://www.force11.org/group/fairgroup/fairprinciples)
+- [Go-FAIR initiative: FAIR Principles](https://www.go-fair.org/fair-principles/)
+- [TIB Blog: The FAIR Data Principles for Research Data](https://blogs.tib.eu/wp/tib/2017/09/12/the-fair-data-principles-for-research-data/)
