--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -18,10 +18,83 @@ Quite a few ontologies already exist for the semantic description of general sci
 ![Ontology-based RDM](/img/topics/Overview_Ontologies4Chem_2021.svg)
 Image Attribution: Philip Strömert, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
 
-# General Scientific Ontologies useful for NFDI4Chem
+| Ontology | Domain | License | Modularity | Used in |
+| -------- | ------ | ------- | ---------- | ------- |
+| [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO \& OBO based | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB |
+| [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)  | chemistry | CC0 1.0 | BFO \& OBO based | unknown |
+| [ChemOnt](http://classyfire.wishartlab.com/downloads) | chemistry | custom OA license | subsumable under BFO's \newline \textit{material entity} | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA |
+| [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)  | chemistry | CC-BY 3.0 | BFO \& OBO based | PubChem, Open PHACTS |
+| [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | chemistry | CC-BY 3.0 | BFO \& OBO based | Chemotion, Allotrope™ |
+| [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | chemistry | CC-BY 4.0 | BFO \& OBO based | RXNO |
+| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | CC-BY 4.0 | BFO \& OBO based | NameRXN, Wikipedia, Chemotion |
+| [OntoKin](http://www.theworldavatar.com/ontology/ontokin/) | chemistry | unknown | OntoCAPE upper level \& modules | J-Park Simulator |
+| [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | chemistry | CC-BY 4.0 | BFO classes \& relations, many AFO- some custom OBO-modules  | Allotrope™ |
+| [PROCO](https://terminology.nfdi4chem.de/ts/ontologies/proco) | chemistry | CC-BY 4.0 | AFO \& OBO based | Allotrope™ |
+| [MS](https://terminology.nfdi4chem.de/ontologies/ms) | chemistry | CC-BY 4.0 | BFO \& OBO mapping possible | mzML |
+| [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv) | chemistry | Public Domain Mark 1.0 | BFO \& OBO mapping possible | MetaboLights, HMDB |
+| [BFO]https://terminology.nfdi4chem.de/ontologies/bfo | upper level (classes only) | CC-BY 4.0 | OBO backbone | >300 ontologies \& >50 organizations, PubChem |
+| [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro) | upper level (relations) | CC0 1.0 | BFO \& OBO based | Monarch Initiative, OBO Foundry, Gene Ontology, PubChem |
+| [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao) | information artefacts | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™, PubChem, ISA tools |
+| [OBI]https://terminology.nfdi4chem.de/ts/ontologies/obi | biomedicine | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™, PubChem |
+| [UO]https://terminology.nfdi4chem.de/ts/ontologies/uo | scientific units | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, UOM, PubChem |
+| [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html) | scientific units | CC-BY 4.0 | BFO \& OBO based mapping possible | openPHACTS |
+| [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato) | phenotypic \& physical qualities | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™ |
+| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | upper level | CC-BY 4.0 | BFO alignment | PubChem |
+| [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam) | life-sciences \& data management | CC-BY 4.0 | BFO \& OBO mapping possible | EMBOSS, Bio-jETI |
+| [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/) | upper level \& engineering | GNU GPLv2 | provides upper level concepts | J-Park Simulator |
+
+# General Scientific Ontologies
+
+## BFO
 The Basic Formal Ontology (BFO)](https://terminology.nfdi4chem.de/ts/ontologies/bfo) is the most widely used upper ontology for many existing chemistry domain ontologies that are part of [The Open Biological and Biomedical Ontology (OBO) Foundry](http://www.obofoundry.org/) project.
+## SIO
 The [Semanticscience Integrated Ontology (SIO)](https://terminology.nfdi4chem.de/ts/ontologies/sio)
 It has been used in [Bio2RDF](http://bio2rdf.org/), [SADI Semantic Web Services](http://sadiframework.org), [DisGeNET](http://rdf.imim.es/DisGeNET.html), [PubChemRDF](http://pubchem.ncbi.nlm.nih.gov/rdf/), [EBI's Gene Expression Atlas](http://www.ebi.ac.uk/rdf/documentation/atlas) and the [Graph4Code project](https://wala.github.io/graph4code/). To foster semantic interoperability, SIO is mapped to BFO and RO for important core classes and relations.
+## OntoCape
+**TODO**
+## RO
+**TODO**
+## OBI
+**TODO**
+## IAO
+**TODO**
+## PATO
+**TODO**
+## EDAM
+**TODO**
+## UO
+**TODO**
+## QUDT
+**TODO**
+
+# Chemistry Domain Ontologies
+## Ontologies for Chemical Entities and their Roles
+## ChEBI
+**TODO**
+## ChemOnt
+**TODO**
+## CHIRO
+**TODO**
+## CHEMINF
+**TODO**
+## CHMO
+**TODO**
+## MOP
+**TODO**
+## RXNO
+**TODO**
+## OntoKin
+**TODO**
+## AFO
+**TODO**
+## PROCO
+**TODO**
+## MS
+**TODO**
+## nmrCV
+
+
+
 
 # Glossary
 In order to be able to speak about the existing ontologies in the domain of chemistry, we need to provide a very brief glossary of the most important technical terms that describe an ontology:
