--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -32,11 +32,11 @@ Image Attribution: Philip Strömert, [CC BY-SA 4.0](https://creativecommons.org/
 | [PROCO](https://terminology.nfdi4chem.de/ts/ontologies/proco) | chemistry | CC-BY 4.0 | AFO \& OBO based | Allotrope™ |
 | [MS](https://terminology.nfdi4chem.de/ontologies/ms) | chemistry | CC-BY 4.0 | BFO \& OBO mapping possible | mzML |
 | [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv) | chemistry | Public Domain Mark 1.0 | BFO \& OBO mapping possible | MetaboLights, HMDB |
-| [BFO]https://terminology.nfdi4chem.de/ontologies/bfo | upper level (classes only) | CC-BY 4.0 | OBO backbone | >300 ontologies \& >50 organizations, PubChem |
+| [BFO](https://terminology.nfdi4chem.de/ontologies/bfo) | upper level (classes only) | CC-BY 4.0 | OBO backbone | >300 ontologies \& >50 organizations, PubChem |
 | [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro) | upper level (relations) | CC0 1.0 | BFO \& OBO based | Monarch Initiative, OBO Foundry, Gene Ontology, PubChem |
 | [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao) | information artefacts | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™, PubChem, ISA tools |
-| [OBI]https://terminology.nfdi4chem.de/ts/ontologies/obi | biomedicine | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™, PubChem |
-| [UO]https://terminology.nfdi4chem.de/ts/ontologies/uo | scientific units | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, UOM, PubChem |
+| [OBI](https://terminology.nfdi4chem.de/ts/ontologies/obi) | biomedicine | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™, PubChem |
+| [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo) | scientific units | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, UOM, PubChem |
 | [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html) | scientific units | CC-BY 4.0 | BFO \& OBO based mapping possible | openPHACTS |
 | [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato) | phenotypic \& physical qualities | CC-BY 4.0 | BFO \& OBO based | OBO Foundry, Allotrope™ |
 | [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | upper level | CC-BY 4.0 | BFO alignment | PubChem |
