--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -38,7 +38,7 @@ The ORCID record connected to ORCID iDs includes the bibliographic output and ma
 
 In addition to  of ORCIDs as non-proprietary PIDs for authors there are also proprietary author identifiers such as Thomsen Reuters Web Of Science’s Researcher ID and Elsevier’s Scopus Author ID.<sup>[18](https://doi.org/10.1087/20120404)</sup>
 
-### Sources and further information 
+## Sources and further information 
 
 - german: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
 - german: [Digital Object Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
