--- a/docs/30_problems/10_dmp.mdx
+++ b/docs/30_problems/10_dmp.mdx
@@ -42,7 +42,7 @@ The creation of a DMP can be supported by various tools. Some of the most common
 
 [DMPTool](https://dmptool.org/) is run by the California Digital Library. Due to the different funding landscape in the US, the tool is only of limited use for German/European projects. One advantage is that DMPTool provides DMP examples on the website. It can be used without using the tool.
 
-[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) was developed in a DFG-funded project from 2015 – 2020 and has a wide recognition in Germany. It is now further maintained by an RDMO working group as an Open Source Software. A general, very detailed template is available in RDMO. In addition, individual subject-specific templates can also be used, mainly for the humanities. Further individual subject-specific templates are being worked on in the disciplines. After a review process by the RDMO working group these templates will be provided and can be used in individual instances. This extension is an advantage of RDMO and makes it easier for researchers to complete DMP templates. Furthermore, RDMO offers general help texts for individual questions.
+[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) was developed in a DFG-funded project from 2015 – 2020 and has a wide recognition in Germany. It is now further maintained by an RDMO working group as an open source software. A general, very detailed template is available in RDMO. In addition, individual subject-specific templates can also be used, mainly for the humanities. Further individual subject-specific templates are being worked on in the disciplines. After a review process by the RDMO working group these templates will be provided and can be used in individual instances. This extension is an advantage of RDMO and makes it easier for researchers to complete DMP templates. Furthermore, RDMO offers general help texts for individual questions.
 
 To further support researchers in answering the questions, working groups have been formed, e.g. in Science Europe or the Research Data Alliance (RDA). The Science Europe Group is focusing on improving the general help texts, while the working group in the RDA focuses on [discipline-specific guidance](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg). Science Europe set up a new version of the [practical guide](https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/) in January 2021. 
 
