--- a/docs/40_topics/50_ontology_search.mdx
+++ b/docs/40_topics/50_ontology_search.mdx
@@ -7,11 +7,11 @@ Image Attribution: Philip Strömert, [CC BY-SA 4.0](https://creativecommons.org/
 
 
 :::info Summary:
-The term ontology, as used in our context, refers to a formally specified conceptualization of a certain research domain that is focused on answering the question of what can and needs to be represented in this domain. An ontology thus defines a collection of technical terms that can be used to semantically describe research data in a [FAIR](https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/topics/fair/) and machine-readable way by the means of annotating the research data with these technical terms. This is best done automatically behind the scenes by your everyday work apps like the [ELN](https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/topics/eln/). However, as automated ontology-based annotation is not the standard yet, as ontologies evolve with the new insights gained from research, and, as they might contain term definitions which a domain expert (e.g. a chemist like you) might disagrees with, one needs to know how to browse and improve ontologies manually. The present article is meant to provide the necessary background needed for this.
+The term ontology, as used in our context, refers to a formally specified conceptualisation of a certain research domain that is focused on answering the question of what can and needs to be represented in this domain. An ontology thus defines a collection of technical terms that can be used to semantically describe research data in a [FAIR](https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/topics/fair/) and machine-readable way by the means of annotating the research data with these technical terms. This is best done automatically behind the scenes by your everyday work apps like the [ELN](https://nfdi4chem.chemie.uni-mainz.de/knowledge_base/docs/topics/eln/). However, as automated ontology-based annotation is not the standard yet, as ontologies evolve with the new insights gained from research, and, as they might contain term definitions which a domain expert (e.g. a chemist like you) might disagrees with, one needs to know how to browse and improve ontologies manually. The present article is meant to provide the necessary background needed for this.
 :::
 
 # Introduction
-Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analyzed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. Ontologies, taxonomies, terminologies or vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data.
+Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analysed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. Ontologies, taxonomies, terminologies or vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data.
 Quite a few ontologies already exist for the semantic description of general scientific concepts and relations, as well as for chemistry specific ones.
 
 # Ontologies useful for Chemistry
